update: correct the whitespace issue using unicode

--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,7 @@ body {
     background-repeat:   no-repeat;
     background-position: center center; 
     box-sizing: border-box;
+    box-sizing: border-box;
   margin: 0;
   display: flex;
   place-items: center;
